Infra/vpc-creation1.yml
AWSTemplateFormatVersion: '2010-09-09'
Resources:
  MyVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: '10.0.0.0/16'
      EnableDnsSupport: true
      EnableDnsHostnames: true
    Tags:
      - Key: 'Name'
        Value: 'devs-with-mission-VPC'

  MyPublicSubnet1A:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      AvailabilityZone: us-east-1a
      CidrBlock: '10.0.0.0/24'
    Tags:
      - Key: 'Name'
        Value: 'devs-with-mission-PublicSubnet1A'

  MyPublicSubnet1B:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      AvailabilityZone: us-east-1b
      CidrBlock: '10.0.1.0/24'
    Tags:
      - Key: 'Name'
        Value: 'devs-with-mission-PublicSubnet1B'

  MyPrivateSubnet1A:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      AvailabilityZone: us-east-1a
      CidrBlock: '10.0.2.0/24'
    Tags:
      - Key: 'Name'
        Value: 'devs-with-mission-PrivateSubnet1A'

  MyPrivateSubnet1B:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      AvailabilityZone: us-east-1b
      CidrBlock: '10.0.3.0/24'
    Tags:
      - Key: 'Name'
        Value: 'devs-with-mission-PrivateSubnet1B'

  MyInternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: 'Name'
          Value: 'devs-with-mission-InternetGateway'

  MyGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref MyInternetGateway
    Tags:
      - Key: 'Name'
        Value: 'devs-with-mission-GatewayAttachment'

  MyPublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref MyVPC
    Tags:
      - Key: 'Name'
        Value: 'devs-with-mission-PublicRouteTable'

  MyPublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: MyGatewayAttachment
    Properties:
      RouteTableId: !Ref MyPublicRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref MyInternetGateway
    Condition: CreateDefaultRoute
    Tags:
      - Key: 'Name'
        Value: 'devs-with-mission-PublicRoute'

  MyPrivateRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref MyVPC
    Tags:
      - Key: 'Name'
        Value: 'devs-with-mission-PrivateRouteTable'

  MyPrivateRoute1A:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref MyPrivateRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref MyNatGateway1A
    Tags:
      - Key: 'Name'
        Value: 'devs-with-mission-PrivateRoute1A'

  MyPrivateRoute1B:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref MyPrivateRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref MyNatGateway1B
    Tags:
      - Key: 'Name'
        Value: 'devs-with-mission-PrivateRoute1B'

  MyNatGateway1A:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt MyEIP1A.AllocationId
      SubnetId: !Ref MyPublicSubnet1A
    Tags:
      - Key: 'Name'
        Value: 'devs-with-mission-NatGateway1A'

  MyNatGateway1B:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt MyEIP1B.AllocationId
      SubnetId: !Ref MyPublicSubnet1B
    Tags:
      - Key: 'Name'
        Value: 'devs-with-mission-NatGateway1B'

  MyEIP1A:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: 'vpc'
    Tags:
      - Key: 'Name'
        Value: 'devs-with-mission-EIP1A'

  MyEIP1B:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: 'vpc'
    Tags:
      - Key: 'Name'
        Value: 'devs-with-mission-EIP1B'

  MySecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'My Security Group'
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

Conditions:
  CreateDefaultRoute:
    !Not
      - !Equals
        - !Ref MyNatGateway1A
        - ''

Outputs:
  VPCId:
    Value: !Ref MyVPC
  PublicSubnet1AId:
    Value: !Ref MyPublicSubnet1A
  PublicSubnet1BId:
    Value: !Ref MyPublicSubnet1B
  PrivateSubnet1AId:
    Value: !Ref MyPrivateSubnet1A
  PrivateSubnet1BId:
    Value: !Ref MyPrivateSubnet1B
  InternetGatewayId:
    Value: !Ref MyInternetGateway
  PublicRouteTableId:
    Value: !Ref MyPublicRouteTable
  PrivateRouteTableId:
    Value: !Ref MyPrivateRouteTable
  NatGateway1AId:
    Value: !Ref MyNatGateway1A
  NatGateway1BId:
    Value: !Ref MyNatGateway1B
  EIP1A:
    Value: !Ref MyEIP1A
  EIP1B:
    Value: !Ref MyEIP1B
  SecurityGroupId:
    Value: !Ref MySecurityGroup
